# ladon

./: .gitignore  LICENSE  README.md  setup.cfg
features/: convert_input_data.feature
features/steps/: base.py
src/ladon/: __init__.py  __main__.py  backtest.py  base.py  database.py  fetch.py
src/ladon/providers/: binance.py  binance_futures.py
src/ladon/strategies/: buyandhold.py  crossmean.py  macross.py  multima.py
