[metadata]
name = ladon
version = 0.0.1
author = Ricardo Lipas Augusto
author_email = ricardo.lipas@gmail.com
description = Ladon is a framework for backtesting and running algorithmic trading bots.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rlipas/ladon
project_urls =
    Bug Tracker = https://github.com/rlipas/ladon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    httpx
    numpy
    requests
    ujson
    websockets
    argparse

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ladon = ladon:main
